--- a/uitk/widgets/mixins/style.qss
+++ b/uitk/widgets/mixins/style.qss
@@ -7,7 +7,7 @@ QWidget::item:selected {
     background-color: {BUTTON_HOVER};
 }
 QWidget.centralWidget {
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    background-color: {WINDOW_BACKGROUND};
     border: 1px solid {BORDER_COLOR};
     color: {TEXT_COLOR};
 }
@@ -21,13 +21,13 @@ QWidget.QLabel {
 
 /* -- Containers -- */
 QStackedWidget {
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
 }
 QStackedWidget QFrame {
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
 }
 QToolBox {
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
     border: 1px solid {BORDER_COLOR};
 }
 QToolBox::tab {
@@ -46,15 +46,15 @@ QToolBox::tab:hover {
     color: {TEXT_HOVER};
 }
 QMainWindow {
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    background-color: {WINDOW_BACKGROUND};
     border: 1px solid {BORDER_COLOR};
 }
 QGroupBox {
     border: none;
     border-radius: 1px;
-    padding: 1px 1px 1px 1px;
-    margin: 12px 0px 1px 0px;
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    padding: 1px 1px 2px 1px;
+    margin: 12px 0px 2px 0px;
+    background-color: {WINDOW_BACKGROUND};
 }
 /* QGroupBox:hover {
     border: 1px solid {BUTTON_HOVER};
@@ -64,7 +64,7 @@ QGroupBox::title {
     subcontrol-position: top left;
     left: 2px;
     padding-top: 0px;
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    background-color: {PANEL_BACKGROUND};
     color: {TEXT_COLOR};
 }
 QGroupBox[class="CollapsableGroup"]::title:hover {
@@ -83,7 +83,7 @@ QGroupBox::title:disabled {
 
 /* -- Menus -- */
 QMenu {
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    background-color: {WINDOW_BACKGROUND};
     border: 1px solid {BORDER_COLOR};
     margin: 0px;
 }
@@ -96,7 +96,7 @@ QMenu::item:disabled {
 }
 QMenu::item:selected {
     border-color: {BUTTON_CHECKED};
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
 }
 QMenu::icon:checked {
     background-color: gray;
@@ -109,7 +109,7 @@ QMenu::icon:checked {
 }
 QMenu::separator {
     height: 2px;
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
     margin: 0px 5px 0px 10px;
 }
 QMenu::indicator {
@@ -117,7 +117,7 @@ QMenu::indicator {
     height: 13px;
 }
 QMenuBar {
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
     spacing: 1px;
 }
 QMenuBar::item {
@@ -199,7 +199,7 @@ QRadioButton:disabled {
 QPushButton#toggle_expand {
     border: none;
     padding: 0px 0px 0px 0px;
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
 }
 QPushButton:flat {
     border: none;
@@ -422,13 +422,13 @@ QComboBox QAbstractItemView::item:hover {
 QLabel {
     background-color: {WIDGET_BACKGROUND};
     color: {TEXT_COLOR};
-    border-style: outset;
-    border-radius: 1px;
+    border-style: none;
+    border-radius: 0px;
     border: 1px solid {BORDER_COLOR};
-    padding: 0px 1px 0px 1px;
+    padding: 0px 0px 0px 0px;
 }
 QLabel[clickable="true"]:hover {
-    border: 2px solid {BUTTON_HOVER};
+    background-color: {BUTTON_HOVER};
     color: {TEXT_HOVER};
 }
 QLabel:enabled {
@@ -455,7 +455,7 @@ QLineEdit:enabled {
     color: {TEXT_COLOR};
 }
 QLineEdit:read-only {
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
 }
 QTextEdit {
     color: {TEXT_COLOR};
@@ -493,12 +493,12 @@ QPlainTextEdit:disabled {
 
 /* -- Item Views -- */
 QAbstractItemView {
-    alternate-background-color: {MAIN_BACKGROUND};
+    alternate-background-color: {PANEL_BACKGROUND};
     background-attachment: fixed;
     color: {TEXT_COLOR};
 }
 QAbstractItemView::item:alternate {
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
 }
 QAbstractItemView::item:selected {
     border: 1px solid {BORDER_COLOR};
@@ -637,7 +637,7 @@ QAbstractSlider::handle {
     margin-bottom: -6px;
     border: 1px solid {BORDER_COLOR};
     border-radius: 1px;
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
 }
 QAbstractSlider::handle:hover {
     background-color: {BUTTON_HOVER};
@@ -672,7 +672,7 @@ QScrollBar::handle:vertical {
     width: 0px;
 }
 QScrollBar::handle:horizontal {
-    background: {MAIN_BACKGROUND};
+    background: {PANEL_BACKGROUND};
     min-width: 20px;
     border: 1px solid black;
     border-radius: 1px;
@@ -682,7 +682,7 @@ QScrollBar::handle:vertical:hover {
     background: transparent;
 }
 QScrollBar::handle:horizontal:hover {
-    background: {MAIN_BACKGROUND};
+    background: {PANEL_BACKGROUND};
     border: 2px solid {BUTTON_HOVER};
 }
 QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical {
@@ -717,7 +717,7 @@ QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
 /* -- Progress Bar -- */
 QProgressBar {
     border: 1px solid {BORDER_COLOR};
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
 }
 QProgressBar:hover {
     border: 2px solid {BUTTON_HOVER};
@@ -749,7 +749,7 @@ QSizeGrip[class~="SizeGrip"] {
 }
 
 .MenuStatusBar {
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    background-color: {WINDOW_BACKGROUND};
     border: none;
     color: {TEXT_COLOR};
 }
@@ -813,14 +813,14 @@ QSizeGrip[class~="SizeGrip"] {
     selection-color: {HIGHLIGHT_COLOR};
 }
 .translucentBgWithBorder {
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    background-color: {WINDOW_BACKGROUND};
     border: 1px solid {BORDER_COLOR};
     color: {TEXT_COLOR};
     selection-background-color: {TEXT_BACKGROUND};
     selection-color: {HIGHLIGHT_COLOR};
 }
 .bgWithBorder {
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
     border: 1px solid {BORDER_COLOR};
     color: {TEXT_COLOR};
     selection-background-color: {TEXT_BACKGROUND};
@@ -897,7 +897,7 @@ Header > QPushButton {
     border: none;
 }
 Header > QPushButton:hover {
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    background-color: {WINDOW_BACKGROUND};
     border: none;
 }
 Header > QPushButton#hdr_hide:hover {
@@ -908,7 +908,7 @@ Header > QPushButton#hdr_hide:hover {
 /* Menu & MainWindow custom widgets inherit translucent border styling */
 Menu,
 MainWindow {
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    background-color: {WINDOW_BACKGROUND};
     border: 1px solid {BORDER_COLOR};
     color: {TEXT_COLOR};
     selection-background-color: {TEXT_BACKGROUND};
@@ -917,12 +917,12 @@ MainWindow {
 
 /* Menu Frame (inner container with border) */
 QFrame#menuFrame {
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    background-color: {WINDOW_BACKGROUND};
     border: 1px solid {BORDER_COLOR};
     color: {TEXT_COLOR};
 }
 QFrame#menuFrame:hover {
-    background-color: {MAIN_BACKGROUND_ALPHA};
+    background-color: {WINDOW_BACKGROUND};
     border: 1px solid {BORDER_COLOR};
 }
 
@@ -956,7 +956,7 @@ QTreeWidget {
     selection-background-color: {BUTTON_HOVER};
     show-decoration-selected: 1;
     gridline-color: transparent;
-    alternate-background-color: {MAIN_BACKGROUND};
+    alternate-background-color: {PANEL_BACKGROUND};
 }
 
 QTreeWidget::branch {
@@ -1063,7 +1063,7 @@ QTreeWidget::item:hover:!selected {
 }
 
 QTreeWidget::item:alternate {
-    background-color: {MAIN_BACKGROUND};
+    background-color: {PANEL_BACKGROUND};
 }
 
 /* Custom TreeWidget class support */
@@ -1086,7 +1086,8 @@ Separator {
     color: transparent;
     background: transparent;
     border: none;
-    margin: 0px 0px;
+    margin: 0px 2px 0px 2px;
+    padding: 0px 2px 0px 2px;
 }
 Separator:hover {
     border: none;
@@ -1094,7 +1095,7 @@ Separator:hover {
 Separator > QLabel {
     color: {TEXT_COLOR};
     font-size: 11px;
-    background: {MAIN_BACKGROUND};
+    background: {PANEL_BACKGROUND};
     border: none;
     padding: 0px 0px;
 }
